--- a/src/sass/normalize.scss
+++ b/src/sass/normalize.scss
@@ -71,3 +71,13 @@ button {
     transition: transform 200ms ease-in-out;
   }
 }
+
+input[type="number"] {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
